# zoomcamp-docker

./: README.md
pipeline/: Notebook.ipynb  ingest_data.py  pipeline.py  pyproject.toml
