[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "psycopg[binary,pool]>=3.3.3",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
